--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -1,8 +1,6 @@
-siteTitle: Yellow Cake
-siteUrl: 'https://yellowcake.netlify.com'
-siteDescription: >-
-  A starter project for creating lightning-fast websites with Gatsby v2 Netlify
-  CMS v2 and Uploadcare media library.
+siteTitle: Corri's Vocal Studio
+siteUrl: 'https://corri.willis.ws'
+siteDescription: Serving your vocal technique needs since the time of the dinosaurs.
 socialMediaCard:
   image: 'https://ucarecdn.com/fcc8d148-a9a8-42ee-a793-0f12b1437f61/'
-googleTrackingId: 'UA-133175780-1'
+googleTrackingId: UA-133175780-1
